@@ -95,7 +95,6 @@ $fh = fopen($myFile, 'w') or die("<br/><br/><br/>Can't open file: GameEngine\con
 		$text = preg_replace("'%SPASS%'", SQL_PASS, $text);
 		$text = preg_replace("'%SDB%'", SQL_DB, $text);
 		$text = preg_replace("'%PREFIX%'", TB_PREFIX, $text);
-		$text = preg_replace("'%CONNECTT%'", DB_TYPE, $text);		
 		$text = preg_replace("'%LIMIT_MAILBOX%'", $LIMIT_MAILBOX, $text);
 		$text = preg_replace("'%MAX_MAILS%'", MAX_MAIL, $text);
 		$text = preg_replace("'%ARANK%'", $INCLUDE_ADMIN, $text);		
