@@ -1,7 +1,7 @@
 <!---<?php
 /*include("Templates/Plus/pmenu.tpl");
-    $MyVilId = mysql_query("SELECT * FROM ".TB_PREFIX."vdata WHERE `wref`='".$village->wid."'") or die(mysql_error());
-    $uuVilid = mysql_fetch_array($MyVilId);
+    $MyVilId = $database->query("SELECT * FROM ".TB_PREFIX."vdata WHERE `wref`='".$village->wid."'");
+    $uuVilid = $this->db->fetchArray($MyVilId);
     $totalR = ($uuVilid['6']+$uuVilid['7']+$uuVilid['8']+$uuVilid['10']);
     $quart = ($totalR / 4);
 	*/
@@ -21,11 +21,11 @@
 			<td align="center">
 <?php
 if($session->sit == 0) {
-	/* $MyGold = mysql_query("SELECT * FROM ".TB_PREFIX."users WHERE `id`='".$session->uid."'") or die(mysql_error());
-    $golds = mysql_fetch_array($MyGold);
+	/* $MyGold = $database->query("SELECT * FROM ".TB_PREFIX."users WHERE `id`='".$session->uid."'");
+    $golds = $this->db->fetchArray($MyGold);
 
-    $MyId = mysql_query("SELECT * FROM ".TB_PREFIX."users WHERE `id`='".$session->uid."'") or die(mysql_error());
-    $uuid = mysql_fetch_array($MyId);
+    $MyId = $database->query("SELECT * FROM ".TB_PREFIX."users WHERE `id`='".$session->uid."'");
+    $uuid = $this->db->fetchArray($MyId);
 
 	echo "<input type='text' name='T1' size='6' value=".$quart."></td>";
 			echo "<td align='center'>";
@@ -34,7 +34,7 @@ if($session->sit == 0) {
 	echo "<input type='text' name='T3' size='6' value=".$quart."></td>";
 			echo "<td align='center'>";
 	echo "<input type='text' name='T4' size='6' value=".$quart."></td>";
-mysql_query("UPDATE ".TB_PREFIX."users set gold = ".($session->gold-1)." where `id`='".$session->uid."'") or die(mysql_error());
+$database->query("UPDATE ".TB_PREFIX."users set gold = ".($session->gold-1)." where `id`='".$session->uid."'");
  */
 }
 ?>
