@@ -2,6 +2,7 @@
 [*] admin/database fixed and decorated
 [*] Automation filelockers fixed
 [*] db connection completely fixed
+[*] deprecated mysql not available any more
 
 28.04.2020
 [*] install fixed and decorated
